--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>     
 
   <div class="button">
-      <img src="images/Kamil.jpg" alt="L'Epicurienne" class="img-circle">
+      <img src="images/Kamil.JPG" alt="L'Epicurienne" class="img-circle">
       <h3> Our Chef Kamil Filali</h3>
       
   </div>    
